Implement API Gateway
Enables site to be served over https
